Added re-directs, responsive forms

--- a/public/call-logs.html
+++ b/public/call-logs.html
@@ -13,6 +13,12 @@
     <!-- For production -->
     <link rel="stylesheet" href="dist.css" />
     <title>Vista - Call Logs</title>
+
+    <script>
+      setTimeout(() => {
+        window.location.href = 'https://vista-web-app.herokuapp.com/call';
+      }, 3000);
+    </script>
   </head>
   <body class="call-logs font-circular-std text-black font-normal mt-8 mb-20">
     <header class="flex items-center justify-between mb-4 mx-[50px]">
