--- a/public/hire.html
+++ b/public/hire.html
@@ -12,7 +12,7 @@
 
     <!-- For production -->
     <link rel="stylesheet" href="dist.css" />
-    <title>Vista - Home</title>
+    <title>Vista - Hire Artisan</title>
   </head>
   <body class="hire font-poppins text-black font-semibold text-[18px] leading-[27px] mt-8 mb-20">
     <header class="flex items-center justify-between mb-4 mx-[50px]">
