--- a/public/login.html
+++ b/public/login.html
@@ -20,6 +20,18 @@
         const pwdInput = document.querySelector('#password');
         pwdInput.type = pwdInput.type === 'password' ? 'text' : 'password';
       };
+
+      const valiadteLogin = e => {
+        e.preventDefault();
+
+        window.location.pathname = './hire.html';
+
+        // get user data from database. If it exists store user's details in localStorage and re-direct to specific page based on type attribute
+        // NB: Format of data has been specified in sign-up.html in storeUserDetails function payload object
+        // if type attribute is "artisan", then re-direct to clients.html
+        // else if "customer" re-direct to hire.html
+        // default re-direct is to hire.html
+      };
     </script>
   </head>
   <body
@@ -27,7 +39,10 @@
   >
     <h1 class="font-semibold text-[40px] leading-[60px] text-center mb-7">Log in</h1>
 
-    <form class="placeholder:text-gray w-[519px] mx-auto flex flex-col gap-y-5">
+    <form
+      class="placeholder:text-gray w-[519px] mx-auto flex flex-col gap-y-5"
+      onsubmit="valiadteLogin(event)"
+    >
       <div class="input-group flex flex-col gap-y-2">
         <label class="block" for="email">Email</label>
         <input
@@ -60,11 +75,12 @@
       <div class="flex flex-col gap-y-4 text-gray text-[15px] leading-5 font-normal">
         <a href="./forgot-password.html" class="text-turquoise text-right">I forgot my password</a>
 
-        <a
-          href="./hire.html"
-          class="text-center bg-turquoise text-white rounded-full py-4 font-semibold text-[20px] leading-8"
-          >Log in</a
-        >
+        <!-- href="./hire.html" -->
+        <input
+          type="submit"
+          value="Log in"
+          class="text-center bg-turquoise text-white rounded-full py-4 font-semibold text-[20px] leading-8 cursor-pointer"
+        />
 
         <p class="text-center">
           Don't have an account ?
