fixed wrong re-diret link

--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -55,7 +55,7 @@
         if (type === 'customer') {
           window.location.pathname = './hire.html';
         } else if (type === 'artisan') {
-          window.location.pathname = './client.html';
+          window.location.pathname = './clients.html';
         }
       };
     </script>
