added logout functionality

--- a/public/call-logs.html
+++ b/public/call-logs.html
@@ -16,7 +16,7 @@
 
     <script>
       setTimeout(() => {
-        window.location.href = 'https://vista-web-app.herokuapp.com/call';
+        window.location.href = 'https://vista-web-app.herokuapp.com/makecall';
       }, 3000);
     </script>
   </head>
