--- a/public/loading.html
+++ b/public/loading.html
@@ -11,7 +11,7 @@
     <title>Vista</title>
     <script>
       setTimeout(() => {
-        window.location.pathname = './home.html';
+        window.location.pathname = '/home.html';
       }, 5000);
     </script>
   </head>
