--- a/public/login.html
+++ b/public/login.html
@@ -24,7 +24,7 @@
       const valiadteLogin = e => {
         e.preventDefault();
 
-        window.location.pathname = './hire.html';
+        window.location.pathname = '/hire.html';
 
         // get user data from database. If it exists store user's details in localStorage and re-direct to specific page based on type attribute
         // NB: Format of data has been specified in sign-up.html in storeUserDetails function payload object
