--- a/public/artisan.html
+++ b/public/artisan.html
@@ -16,19 +16,31 @@
 
     <script>
       window.onload = () => {
-        // collect details set by hire.html in localstorage and set name, job and pay
+        // collect details set by hire.html in localstorage and set name, job, pay, phone number and picture
         document.querySelector('#name').innerText = localStorage.artisanName;
         document.querySelector('#job').innerText = localStorage.artisanJob;
         document.querySelector('#pay').innerText = localStorage.artisanPay;
+        document.querySelector('#phone-number').innerText = localStorage.artisanPhone;
+        document.querySelector('#artisan-image').style.backgroundImage =
+          localStorage.artisanPicture;
       };
     </script>
   </head>
   <body class="artisan font-poppins text-black font-semibold text-[18px] leading-[27px] mt-8 mb-20">
-    <header class="flex items-center justify-between mb-4 mx-[50px]">
+    <header class="flex items-center justify-between mb-4 mx-16">
       <img src="./assets/svg/vista-logo.svg" class="w-[132px] h-[43px]" />
-      <a id="user" href="./call-logs.html">
-        <img src="./assets/svg/user.svg" class="w-10 h-10" />
-      </a>
+
+      <div class="flex items-center gap-x-16">
+        <a id="user" href="./call-logs.html">
+          <img src="./assets/svg/user.svg" class="w-10 h-10" />
+        </a>
+
+        <a
+          href="./login.html"
+          class="text-turquoise border-[1px] border-solid border-turquoise py-2 px-4 rounded"
+          >Log out</a
+        >
+      </div>
     </header>
 
     <h1 class="text-[60px] leading-[90px] text-center mb-16">Hire Me</h1>
@@ -37,7 +49,10 @@
       class="mx-16 p-11 font-circular-std font-medium border-[1px] border-black border-solid"
     >
       <div class="fore-details grid grid-cols-[346px_50%_1fr_1fr] mb-14">
-        <div id="artisan-image" class="w-[346px] h-[346px] rounded-full bg-alto mr-16"></div>
+        <div
+          id="artisan-image"
+          class="w-[346px] h-[346px] rounded-full bg-alto bg-center bg-no-repeat bg-cover mr-16"
+        ></div>
 
         <div class="personal-details mt-14 ml-16">
           <p id="name" class="text-[44px] leading-[56px]">James Charles</p>
@@ -56,8 +71,9 @@
 
       <div class="job-details text-[24px] leading-7 font-bold flex flex-col gap-y-2">
         <p id="pay">$10/hr</p>
+        <p id="phone-number" class="font-normal">+2341234567890</p>
         <p>Job Description</p>
-        <p id="description" class="font-normal text-[18px] leading-6">
+        <p id="description" class="font-light text-[18px] leading-6">
           A Plumber, or Plumbing Maintenance Technician, is a skilled tradesperson in charge of
           installing, inspecting and repairing pipes and plumbing systems to make sure all of a
           building's fixtures operate correctly. Their duties include finding the source of leaks
