--- a/public/clients.html
+++ b/public/clients.html
@@ -17,6 +17,11 @@
   <body class="clients font-poppins text-black font-semibold text-[18px] leading-[27px] mt-8 mb-20">
     <header class="flex items-center justify-between mb-4 mx-[50px]">
       <img src="./assets/svg/vista-logo.svg" class="w-[132px] h-[43px]" />
+      <a
+        href="./login.html"
+        class="text-turquoise border-[1px] border-solid border-turquoise py-2 px-4 rounded"
+        >Log out</a
+      >
     </header>
 
     <h1 class="text-[60px] leading-[90px] text-center mb-7">Client Request</h1>
