--- a/public/hire.html
+++ b/public/hire.html
@@ -15,23 +15,34 @@
     <title>Vista - Hire Artisan</title>
 
     <script>
-      const showArtisanDetails = e => {
+      const storeArtisanDetails = e => {
         const p_tags = e.target.getElementsByTagName('p');
 
         localStorage.artisanName = p_tags[0].innerText;
         localStorage.artisanJob = p_tags[1].innerText;
         localStorage.artisanPay = p_tags[2].innerText;
+        localStorage.artisanPhone = p_tags[3].innerText;
+        localStorage.artisanPicture = e.target.style.backgroundImage;
 
-        window.location.pathname = './artisan.html';
+        window.location.pathname = '/artisan.html';
       };
     </script>
   </head>
   <body class="hire font-poppins text-black font-semibold text-[18px] leading-[27px] mt-8 mb-20">
-    <header class="flex items-center justify-between mb-4 mx-[50px]">
+    <header class="flex items-center justify-between mb-4 mx-16">
       <img src="./assets/svg/vista-logo.svg" class="w-[132px] h-[43px]" />
-      <a href="./call-logs.html">
-        <img src="./assets/svg/user.svg" class="w-10 h-10" />
-      </a>
+
+      <div class="flex items-center gap-x-16">
+        <a id="user" href="./call-logs.html">
+          <img src="./assets/svg/user.svg" class="w-10 h-10" />
+        </a>
+
+        <a
+          href="./login.html"
+          class="text-turquoise border-[1px] border-solid border-turquoise py-2 px-4 rounded"
+          >Log out</a
+        >
+      </div>
     </header>
 
     <h1 class="text-[60px] leading-[90px] text-center mb-7">Hire Me</h1>
@@ -39,184 +50,46 @@
     <section class="near-you ml-[50px] mb-12">
       <h3 class="text-[30px] leading-10 mb-7">Artisans near you</h3>
 
-      <img src="./assets/svg/scroll-left.svg" class="w-8 h-8 relative top-40 cursor-pointer" />
+      <!-- <img src="./assets/svg/scroll-left.svg" class="w-8 h-8 relative top-40 cursor-pointer" />
       <img
         src="./assets/svg/scroll-right.svg"
         class="w-8 h-8 relative top-32 left-[95%] cursor-pointer"
-      />
+      /> -->
 
       <div
-        class="grid grid-cols-[repeat(6,264px)] gap-x-5 h-[311px] overflow-x-hidden -mt-14 border-solid border-black"
+        class="grid grid-cols-[repeat(4,264px)] gap-x-5 h-80 overflow-x-hidden border-solid border-black"
       >
         <div
-          class="artisan bg-[url(./assets/images/artisan-1.png)] bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg"
-          onclick="showArtisanDetails(event)"
+          class="artisan bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg cursor-pointer"
+          onclick="storeArtisanDetails(event)"
+          style="background-image: url(./assets/images/artisan-1.png)"
         >
           <div
-            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-[2px] h-20 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
+            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-2 h-24 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
           >
-            <p class="text-[18px] leading-6">James Charles</p>
-            <p class="text-gray">Plumber</p>
-            <p>$10/hr</p>
-            <a href="./call-logs.html" class="relative bottom-[60%] left-[204px]"
+            <p class="text-[18px] leading-6">Mr Folorunsho Ogunmefun</p>
+            <p class="text-gray">Woodwork</p>
+            <p>N5000/day (negotiable)</p>
+            <p class="hidden">+2348085025357</p>
+            <a href="./call-logs.html" class="relative bottom-[45%] left-[204px]"
               ><img src="./assets/svg/call.svg" class="w-8 h-8"
             /></a>
           </div>
         </div>
 
         <div
-          class="artisan bg-[url(./assets/images/artisan-2.png)] bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg"
-          onclick="showArtisanDetails(event)"
+          class="artisan bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg cursor-pointer"
+          onclick="storeArtisanDetails(event)"
+          style="background-image: url(./assets/images/artisan-3.png)"
         >
           <div
-            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-[2px] h-20 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
+            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-2 h-24 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
           >
-            <p class="text-[18px] leading-6">James Charles</p>
-            <p class="text-gray">Plumber</p>
-            <p>$10/hr</p>
-            <a href="./call-logs.html" class="relative bottom-[60%] left-[204px]"
-              ><img src="./assets/svg/call.svg" class="w-8 h-8"
-            /></a>
-          </div>
-        </div>
-
-        <div
-          class="artisan bg-[url(./assets/images/artisan-3.png)] bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg"
-          onclick="showArtisanDetails(event)"
-        >
-          <div
-            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-[2px] h-20 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
-          >
-            <p class="text-[18px] leading-6">James Charles</p>
-            <p class="text-gray">Plumber</p>
-            <p>$10/hr</p>
-            <a href="./call-logs.html" class="relative bottom-[60%] left-[204px]"
-              ><img src="./assets/svg/call.svg" class="w-8 h-8"
-            /></a>
-          </div>
-        </div>
-
-        <div
-          class="artisan bg-[url(./assets/images/artisan-4.png)] bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg"
-          onclick="showArtisanDetails(event)"
-        >
-          <div
-            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-[2px] h-20 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
-          >
-            <p class="text-[18px] leading-6">James Charles</p>
-            <p class="text-gray">Plumber</p>
-            <p>$10/hr</p>
-            <a href="./call-logs.html" class="relative bottom-[60%] left-[204px]"
-              ><img src="./assets/svg/call.svg" class="w-8 h-8"
-            /></a>
-          </div>
-        </div>
-
-        <div
-          class="artisan bg-[url(./assets/images/artisan-5.png)] bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg"
-          onclick="showArtisanDetails(event)"
-        >
-          <div
-            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-[2px] h-20 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
-          >
-            <p class="text-[18px] leading-6">James Charles</p>
-            <p class="text-gray">Plumber</p>
-            <p>$10/hr</p>
-            <a href="./call-logs.html" class="relative bottom-[60%] left-[204px]"
-              ><img src="./assets/svg/call.svg" class="w-8 h-8"
-            /></a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="might-like ml-[50px]">
-      <h3 class="text-[30px] leading-10 mb-7">Artisans you might like</h3>
-
-      <img src="./assets/svg/scroll-left.svg" class="w-8 h-8 relative top-40 cursor-pointer" />
-      <img
-        src="./assets/svg/scroll-right.svg"
-        class="w-8 h-8 relative top-32 left-[95%] cursor-pointer"
-      />
-
-      <div
-        class="grid grid-cols-[repeat(6,264px)] gap-x-5 h-[311px] overflow-x-hidden -mt-14 border-solid border-black"
-      >
-        <div
-          class="artisan bg-[url(./assets/images/artisan-7.png)] bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg"
-          onclick="showArtisanDetails(event)"
-        >
-          <div
-            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-[2px] h-20 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
-          >
-            <p class="text-[18px] leading-6">James Charles</p>
-            <p class="text-gray">Plumber</p>
-            <p>$10/hr</p>
-            <a href="./call-logs.html" class="relative bottom-[60%] left-[204px]"
-              ><img src="./assets/svg/call.svg" class="w-8 h-8"
-            /></a>
-          </div>
-        </div>
-
-        <div
-          class="artisan bg-[url(./assets/images/artisan-8.png)] bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg"
-          onclick="showArtisanDetails(event)"
-        >
-          <div
-            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-[2px] h-20 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
-          >
-            <p class="text-[18px] leading-6">James Charles</p>
-            <p class="text-gray">Plumber</p>
-            <p>$10/hr</p>
-            <a href="./call-logs.html" class="relative bottom-[60%] left-[204px]"
-              ><img src="./assets/svg/call.svg" class="w-8 h-8"
-            /></a>
-          </div>
-        </div>
-
-        <div
-          class="artisan bg-[url(./assets/images/artisan-9.png)] bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg"
-          onclick="showArtisanDetails(event)"
-        >
-          <div
-            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-[2px] h-20 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
-          >
-            <p class="text-[18px] leading-6">James Charles</p>
-            <p class="text-gray">Plumber</p>
-            <p>$10/hr</p>
-            <a href="./call-logs.html" class="relative bottom-[60%] left-[204px]"
-              ><img src="./assets/svg/call.svg" class="w-8 h-8"
-            /></a>
-          </div>
-        </div>
-
-        <div
-          class="artisan bg-[url(./assets/images/artisan-10.png)] bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg"
-          onclick="showArtisanDetails(event)"
-        >
-          <div
-            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-[2px] h-20 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
-          >
-            <p class="text-[18px] leading-6">James Charles</p>
-            <p class="text-gray">Plumber</p>
-            <p>$10/hr</p>
-            <a href="./call-logs.html" class="relative bottom-[60%] left-[204px]"
-              ><img src="./assets/svg/call.svg" class="w-8 h-8"
-            /></a>
-          </div>
-        </div>
-
-        <div
-          class="artisan bg-[url(./assets/images/artisan-11.png)] bg-cover bg-top w-full h-full border-[1px] flex items-end rounded-lg"
-          onclick="showArtisanDetails(event)"
-        >
-          <div
-            class="artisan-details bg-white rounded-b-lg flex flex-col gap-y-[2px] h-20 w-full font-medium text-[14px] leading-4 p-2 font-circular-std"
-          >
-            <p class="text-[18px] leading-6">James Charles</p>
-            <p class="text-gray">Plumber</p>
-            <p>$10/hr</p>
-            <a href="./call-logs.html" class="relative bottom-[60%] left-[204px]"
+            <p class="text-[18px] leading-6">Mr Femi Ogundairo</p>
+            <p class="text-gray">Electrician</p>
+            <p>N3000/day (negotiable)</p>
+            <p class="hidden">+2348032259867</p>
+            <a href="./call-logs.html" class="relative bottom-[45%] left-[204px]"
               ><img src="./assets/svg/call.svg" class="w-8 h-8"
             /></a>
           </div>
