--- a/public/my-details.html
+++ b/public/my-details.html
@@ -17,8 +17,13 @@
   <body
     class="my-details font-poppins text-black font-semibold text-[18px] leading-[27px] mt-8 mb-20"
   >
-    <header class="mb-4 mx-[50px]">
+    <header class="mb-4 mx-[50px] flex items-center justify-between">
       <img src="./assets/svg/vista-logo.svg" class="w-[132px] h-[43px]" />
+      <a
+        href="./login.html"
+        class="text-turquoise border-[1px] border-solid border-turquoise py-2 px-4 rounded"
+        >Log out</a
+      >
     </header>
 
     <h1 class="text-[60px] leading-[90px] text-center mb-16">Artisan</h1>
