--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -53,9 +53,9 @@
         localStorage.type = type;
 
         if (type === 'customer') {
-          window.location.pathname = './hire.html';
+          window.location.pathname = '/hire.html';
         } else if (type === 'artisan') {
-          window.location.pathname = './clients.html';
+          window.location.pathname = '/clients.html';
         }
       };
     </script>
